# common_data_model

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-cdm-package.yml
infrastructure/: etl.Dockerfile  init-db.sh  postgres.Dockerfile  synthea.Dockerfile
infrastructure/config/: synthea.properties
infrastructure/scripts/: setup-dependencies.R  synthea-etl.R
src/: sample_query.py
src/common_data_model/: config.py  get_query_result.py
tests/: test_config.py  test_get_query_result.py
