[tool.poetry]
name = "common-data-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "common_data_model"}]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.5"
pandas = "^1.5.3"

[tool.poetry.group.test]


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
